# rebear-ai

./: .gitignore  BUFFER_DIAGRAM.txt  CMakeLists.txt  CMakePresets.json  HARDWARE_LIMIT_8_PATCHES.md  IMPLEMENTATION_SUMMARY.md  PATCH_BUFFER_FORMAT.md  PATCH_BUFFER_UPLOAD.md  README.md  VERIFICATION.md
cli/: CMakeLists.txt  main.cpp
data/: README.md
docs/: CLI_USAGE.md  NETWORK_SETUP.md
examples/: gpio_usage.cpp  patch_manager_usage.cpp  sample_patches.json  spi_basic_usage.cpp
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
gui/widgets/: connection_dialog.cpp  connection_dialog.h  hex_viewer.cpp  hex_viewer.h  hex_viewer_new.cpp  patch_editor.cpp  patch_editor.h  transaction_viewer.cpp  transaction_viewer.h
lib/: CMakeLists.txt  example_patch_buffer.cpp  rebearConfig.cmake.in  test_escape_codec.cpp  test_gpio_control.cpp  test_patch.cpp  test_patch_buffer.cpp  test_patch_manager.cpp  test_spi_protocol.cpp  test_transaction.cpp
lib/include/rebear/: escape_codec.h  gpio_control.h  gpio_control_network.h  network_client.h  patch.h  patch_manager.h  protocol.h  spi_protocol.h  spi_protocol_network.h  transaction.h
lib/src/: escape_codec.cpp  gpio_control.cpp  gpio_control_network.cpp  network_client.cpp  patch.cpp  patch_manager.cpp  protocol.cpp  spi_protocol.cpp  spi_protocol_network.cpp  transaction.cpp
plans/: PHASE_1.5_COMPLETE.md  PHASE_1.6_COMPLETE.md  PHASE_1.7_COMPLETE.md  PHASE_1.8.6_TODO.md  PHASE_1.8_COMPLETE.md  PHASE_1.8_NETWORK_VIRTUALIZATION.md  PHASE_2_COMPLETE.md  PHASE_3.1_COMPLETE.md  PHASE_3.2_COMPLETE.md  PHASE_3.3_COMPLETE.md  gpio-interface.md  implementation-guide.md  project-architecture.md  system-diagrams.md  technical-details.md
server/: CMakeLists.txt  command_handler.cpp  command_handler.h  main.cpp  network_server.cpp  network_server.h
test/: test.sh  test2.sh
test/log/: analyze.ipynb  bear2.dump
